Add new pagination parmeters (sort, limit, offset)
